--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,7 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-#set path (not working)
-set-environment -g CHERE_INVOKING 1
-
+# set path when splitting
 bind-key \ run-shell 'tmux splitw -h "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
 bind-key - run-shell 'tmux splitw -v "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
 bind-key c run-shell 'tmux neww "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
@@ -14,7 +12,7 @@ bind-key c run-shell 'tmux neww "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash
 unbind '"'
 unbind %
 
-# Fix vim colors
+# fix vim colors
 set -g default-terminal "xterm"
 
 # reload config file (change file location to your the tmux.conf you want to use)
@@ -26,5 +24,5 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# Enable mouse
+# enable mouse
 set -g mouse on
