Add zsh configa and tmux vi-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,3 +26,12 @@ bind-key l select-pane -R
 
 # enable mouse
 set -g mouse on
+
+# vi commands for copy-mod
+setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
