Fix tmux zsh compatibility

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,14 @@
+# set default shell
+set-option -g default-shell /usr/bin/zsh
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 # set path when splitting
-bind-key \ run-shell 'tmux splitw -h "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
-bind-key - run-shell 'tmux splitw -v "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
-bind-key c run-shell 'tmux neww "cd $(tmux display -p "\$TMUXPWD_#I"); exec bash"'
+bind-key \ splitw -h 
+bind-key - splitw -v
 
 # split panes using | and -
 unbind '"'
