--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # set default shell
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /bin/bash
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -38,17 +38,21 @@ bind p paste-buffer
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
+# repeat last shell command on right pane (if it happens to be a shell)
+bind-key s select-pane -t 1 \; send-keys C-c Up C-m \; last-pane
+
 #set -g default-terminal "screen-256color"
 
-#set -g status-bg black
-set -g status-fg colour231
 
 set -g status-justify centre
 set-option -g status-position top
 
-set-window-option -g window-status-current-fg colour0
-set-window-option -g window-status-current-bg colour231
-set-window-option -g window-status-current-attr bright
+#set -g status-bg black
+#set -g status-fg colour231
+#
+#set-window-option -g window-status-current-fg colour0
+#set-window-option -g window-status-current-bg colour231
+#set-window-option -g window-status-current-attr bright
 
 set -g status-left-length 70
 set -g status-left "#[fg=colour255] #h : #[fg=colour255]#(curl icanhazip.com) #[fg=colour255]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=colour255]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
@@ -56,10 +60,11 @@ set -g status-left "#[fg=colour255] #h : #[fg=colour255]#(curl icanhazip.com) #[
 set -g status-right-length 60
 set -g status-right "#[fg=colour255] %d %b %Y #[fg=colour255]:: %l:%M %p :: #(date -u | awk '{print $4}') "
 
-setw -g window-style 'bg=colour255'
-setw -g window-active-style 'bg=colour231'
+#setw -g window-style 'bg=colour255'
+#setw -g window-active-style 'bg=colour231'
+#
+#setw -g pane-active-border-style 'fg=colour231,bg=colour231'
+#setw -g pane-border-style 'fg=colour255,bg=colour255'
 
-setw -g pane-active-border-style 'fg=colour231,bg=colour231'
-setw -g pane-border-style 'fg=colour255,bg=colour255'
-
+new-session -n $host
 
